[package]
name = "mal"
version = "0.1.0"
authors = ["Francis Murillo <francisavmurillo@gmail.com>"]
edition = "2018"

[dependencies]
nom = "5.0.0"
nom_locate = "1.0.0"
regex ="1.2.0"
lazy_static = "1.3.0"

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
rand = "0.7"
rand_core = "0.5"
